[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydex0"
dynamic = ["version"]
description = 'Powerful, yet easy to use, python library for loading(and eventually writing) dex files.'
readme = "README.md"
requires-python = ">=3.12"
keywords = []
authors = [
  { name = "yntha", email = "126660548+yntha@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydatastreams",
]

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx-new-tab-link",
  "shibuya",
  "myst-parser",
]

[project.urls]
Documentation = "https://pydex.readthedocs.io/en/latest/"
Issues = "https://github.com/yntha/pydex0/issues"
Source = "https://github.com/yntha/pydex0"

[tool.hatch.version]
path = "pydex/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pydex"]

[tool.hatch.build.targets.sdist]
packages = ["pydex"]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.12"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:pydex tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.pytest.ini_options]
addopts = ["--exitfirst"]
log_file = "pytest.log"
log_file_level = "INFO"
log_file_format = "[%(asctime)s %(name)s] %(levelname)s: %(message)s"
log_file_date_format = "%m/%d/%Y %I:%M:%S %p"

[tool.black]
target-version = ["py312"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py312"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Ignore string constants in Exception constructors
  "EM101", "EM102",
  # Ignore boolean parameters
  "FBT001", "FBT002",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["pydex"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["pydex", "tests"]
branch = true
parallel = true
omit = [
  "pydex/__about__.py",
]

[tool.coverage.paths]
pydex0 = ["pydex", "*/pydex0/pydex"]
tests = ["tests", "*/pydex0/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]